[gd_scene load_steps=2 format=3 uid="uid://bhud001"]

[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 120.0
grow_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "06:00 AM"

[node name="DateLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Spring 1, Year 1"

[node name="MoneyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Gold: 500"

[node name="EnergyBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 100.0
